// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match snapshot error props 1`] = `
.c0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid black;
  background-color: black;
  color: white;
  background-color: red;
  border-color: red;
}

.c0.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
>
  test
</button>
`;

exports[`Should match snapshot info props 1`] = `
.c0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid black;
  background-color: black;
  color: white;
  background-color: white;
  color: black;
}

.c0.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
>
  test
</button>
`;

exports[`Should match snapshot success props 1`] = `
.c0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid black;
  background-color: black;
  color: white;
  background-color: green;
  border-color: green;
}

.c0.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
>
  test
</button>
`;

exports[`Should match snapshot warning props 1`] = `
.c0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid black;
  background-color: black;
  color: white;
  background-color: orange;
  border-color: orange;
}

.c0.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
>
  test
</button>
`;

exports[`Should match snapshot without props 1`] = `
.c0 {
  padding: 8px;
  border-radius: 4px;
  border: 1px solid black;
  background-color: black;
  color: white;
}

.c0.c0:hover {
  cursor: pointer;
}

<button
  class="c0"
>
  test
</button>
`;
